--- a/src/components/Datepicker.scoped.scss
+++ b/src/components/Datepicker.scoped.scss
@@ -34,6 +34,24 @@
 .days-block {
   display: block;
 }
+.outside-day {
+  color: #eee;
+}
+.clickable {
+  cursor: pointer;
+  transition: .2s ease;
+  border-radius: 50%;
+  user-select: none;
+
+  &:hover {
+    box-shadow: 0px 0px 2px 2px rgba(0,0,0,.1);
+    color: #db3d44;
+  }
+
+  &.date-title {
+    box-shadow: none;
+  }
+}
 .day {
   display: inline-block;
   margin: 2px;
@@ -42,12 +60,12 @@
   text-align: center;
   line-height: 30px;
 
-  &.selected {
-    background: #db3d44;
-    border-radius: 50%;
-    color: white;
-  }
   &.current-day {
     color: #db3d44;
+  }
+
+  &.selected {
+    background: #db3d44;
+    color: white;
   }
 }
