Datepicker title style.

--- a/src/components/Datepicker.scoped.scss
+++ b/src/components/Datepicker.scoped.scss
@@ -50,6 +50,11 @@
 
   &.date-title {
     box-shadow: none;
+    color: inherit;
+    border-radius: 0;
+    &:hover {
+      background: #eee;
+    }
   }
 }
 .day {
